--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             </div>
             <div class="right-pane">
-                <form name="pledge_form" id="pledge_form" method="post" action="1.Managers/PledgeManager.php">
+                <form name="pledge_form" id="pledge_form" method="post" action="Managers/PledgeManager.php">
                     <label>
                         <span>First Name</span>
                         <input type="text" name="first_name" id="first_name" />
